force-app/main/default/objects/Account_Plan__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>Account_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>