force-app/main/default/objects/Account_Plan__c/fields/CBH__c.field-meta.xml
<CustomField>
    <fullName>CBH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CBH</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plans6</relationshipName>
    <type>Lookup</type>
</CustomField>