force-app/main/default/objects/Account_Plan__c/fields/CE_Head__c.field-meta.xml
<CustomField>
    <fullName>CE_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CE Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plans7</relationshipName>
    <type>Lookup</type>
</CustomField>