force-app/main/default/objects/Account_Plan__c/fields/Clients_Top_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Clients_Top_Competitors__c</fullName>
    <formula>Account_Name__r.Clients_Top_Competitors__c</formula>
    <label>Client’s Top Competitors</label>
    <type>Text</type>
</CustomField>