force-app/main/default/objects/Account_Plan__c/fields/KAM_Name__c.field-meta.xml
<CustomField>
    <fullName>KAM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KAM Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>