force-app/main/default/objects/Account_Plan__c/fields/Key_Competitor_Summary__c.field-meta.xml
<CustomField>
    <fullName>Key_Competitor_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Competitor Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>