force-app/main/default/objects/Account_Plan__c/fields/Key_initiatives__c.field-meta.xml
<CustomField>
    <fullName>Key_initiatives__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key initiatives</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>