force-app/main/default/objects/Account_Plan__c/fields/Key_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Key_Metrics__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Metrics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>