force-app/main/default/objects/Account_Plan__c/fields/Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Income__c</fullName>
    <formula>Account_Name__r.Net_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Income (INR Crores)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>