force-app/main/default/objects/Account_Plan__c/fields/Products_Services__c.field-meta.xml
<CustomField>
    <fullName>Products_Services__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Products/Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>