force-app/main/default/objects/Account_Plan__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <formula>Account_Name__r.Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue (INR Crores)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>