force-app/main/default/objects/Account_Plan__c/fields/RM_Name_Voice__c.field-meta.xml
<CustomField>
    <fullName>RM_Name_Voice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM Name (Voice)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plans4</relationshipName>
    <type>Lookup</type>
</CustomField>