force-app/main/default/objects/Account_Plan__c/fields/RM_TL_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_TL_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM TL Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plans5</relationshipName>
    <type>Lookup</type>
</CustomField>