force-app/main/default/objects/Account_Plan__c/fields/SAM_Name__c.field-meta.xml
<CustomField>
    <fullName>SAM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAM Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>