force-app/main/default/objects/Account_Plan__c/fields/SAM_TL__c.field-meta.xml
<CustomField>
    <fullName>SAM_TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAM TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plans3</relationshipName>
    <type>Lookup</type>
</CustomField>