force-app/main/default/objects/Account_Plan__c/fields/TL_Name__c.field-meta.xml
<CustomField>
    <fullName>TL_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TL Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>