force-app/main/default/objects/Account_Plan__c/fields/Weaknesses_and_Threats__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses_and_Threats__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Weaknesses and Threats</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>