force-app/main/default/objects/Account_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Account_Plan_Status__c</columns>
    <columns>KAM_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>